--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,6 +1,6 @@
 .sidenav{
     background: rgb(149,159, 161, 0.4);
-
+    color: white;
 }
 .nav-scrolled{
     background: rgb(149,159, 161, 0.7) !important;
@@ -23,3 +23,24 @@ a{
 .form-content{
     margin-top: 10vh;
 }
+.parallax-container{
+    background-color: #b61924;
+}
+.particles-JS{
+    position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #b61924;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+.particles-js-canvas-el{
+    z-index: 100;
+}
+canvas {
+    display:block;
+    z-index: 999;
+
+}
+
