--- a/public/css/master.css
+++ b/public/css/master.css
@@ -7,6 +7,10 @@
     transition: all 0.4s ease-in-out;
     color: white;
 }
+nav{
+    background-color: rgb(250,250,250,0.2);
+
+}
 .user-view{
     height: 40%;
 }
@@ -25,22 +29,55 @@ a{
 }
 .parallax-container{
     background-color: #b61924;
+    height: auto !important;
 }
-.particles-JS{
-    position: absolute;
-  width: 100%;
-  height: 100%;
-  background-color: #b61924;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
-}
-.particles-js-canvas-el{
-    z-index: 100;
-}
-canvas {
-    display:block;
-    z-index: 999;
-
+#particles-js canvas {
+    display: block !important;
+    -webkit-transform: scale(1) !important;
+    -ms-transform: scale(1) !important;
+    transform: scale(1) !important;
+    opacity: 1 !important;
+    -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease !important;
+    transition: opacity .8s ease, transform 1.4s ease !important;
 }
 
+#particles-js {
+    width: 100% !important;
+    height: 100% !important;
+    margin: 0 auto;
+}
+
+.parallax{
+    width: 100% !important;
+    height: auto !important;
+    margin: 0 auto !important;
+    z-index: -9000 !important;
+}
+
+@media (max-width: 768px)
+{
+    #particles-js {
+        width: 100% !important;
+        height: 100% !important;
+        margin: 0 auto;
+    }
+    .parallax-container{
+        background-color: #b61924;
+        height: 100% !important;
+    }
+    .parallax{
+        width: 100% !important;
+        height: auto !important;
+        margin: 0 auto !important;
+        z-index: -9000 !important;
+    }
+    #particles-js canvas {
+        display: block !important;
+        -webkit-transform: scale(1) !important;
+        -ms-transform: scale(1) !important;
+        transform: scale(1) !important;
+        opacity: 1 !important;
+        -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease !important;
+        transition: opacity .8s ease, transform 1.4s ease !important;
+    }
+}
