--- a/public/css/master.css
+++ b/public/css/master.css
@@ -1,5 +1,6 @@
 body{
     background: rgb(122,14,21);
+
 }
 .sidenav, .dropdown-content{
     /* background: rgb(149,159, 161, 0.4); */
@@ -34,6 +35,7 @@ a{
 }
 .card {
     opacity: 0.7;
+
 }
 #particles-js canvas {
 
@@ -50,22 +52,64 @@ a{
     width: 100% !important;
     height: 100vh !important;
     margin: 0 auto;
-    background-color: #7a0e15;
+    background-color: rgb(122,14,21);
     display: flex;
-    justify-content: left;
     align-items: center;
 
 }
 .particles-js-canvas-el{
     position: absolute;
 }
+.lead {
+    font-size: 1.25rem;
+    font-weight: 300;
+  }
 
+  .display-1 {
+    font-size: 6rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+
+  .display-2 {
+    font-size: 5.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+
+  .display-3 {
+    font-size: 4.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+
+  .display-4 {
+    font-size: 3.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+  }
+  .caption h1,h4{
+    font-family: 'Nunito', sans-serif;
+    font-weight: 200;
+   }
+   .caption{
+       justify-content: center;
+       align-items: center;
+   }
 
 @media (max-width: 768px)
 {
     .caption{
+        border-left: 3px solid white;
         margin-left: 15px;
+        justify-content: left;
     }
+    .caption h1,h4{
+        margin-left: 10px;
+        font-family: 'Nunito', sans-serif;
+        font-weight: 200;
+    }
+
     #particles-js {
         width: auto !important;
         height: 100vh !important;
