--- a/public/css/master.css
+++ b/public/css/master.css
@@ -9,7 +9,8 @@ body{
 }
 
 .nav-scrolled{
-    background: rgb(149,159, 161, 0.7) !important;
+    background: rgb(122,14,21,0.3) !important;
+    /* background: rgb(149,159, 161, 0.7) !important; */
     transition: all 0.4s ease-in-out;
     color: white;
 }
