--- a/public/css/master.css
+++ b/public/css/master.css
@@ -44,6 +44,10 @@ a{
     transition: opacity .8s ease, transform 1.4s ease !important;
 }
 
+.container h4{
+    margin-top: 10vh;
+    text-align: center;
+}
 .tabs{
     width: 100% !important;
     height: 100vh !important;
