--- a/public/css/master.css
+++ b/public/css/master.css
@@ -55,8 +55,11 @@ a{
     background-color: rgb(122,14,21);
     display: flex;
 }
-.proyectos .card-image{
-    background-color: rgb(122,14,21);
+#Proyectos{
+    height: 100vh !important;
+}
+.card-background{
+    background-color: rgba(255, 255, 255, 0.1);
 }
 .tabs{
     width: 100% !important;
@@ -68,11 +71,17 @@ a{
     outline: none;
 }
 .idiomas{
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 #tab-estudios, #tab-idiomas, #tab-lenguajes, #tab-framework{
-    height: 100% !important;
+    height: auto !important;
 }
+.tabs-content.carousel {
+    height: 100%;
+    overflow-x:hidden;
+    overflow-y: scroll;
+ }
+
 #particles-js {
     width: 100% !important;
     height: 100vh !important;
@@ -171,3 +180,101 @@ a{
         transition: opacity .8s ease, transform 1.4s ease !important;
     }
 }
+
+/* Image accordion style*/
+
+.slider-container {
+    margin-bottom: 60px;
+  }
+  .slider-container h2 {
+    text-align: center;
+  }
+  .flexbox-slider {
+    margin-top: 50px;
+  }
+  /*slide styles !!!YOU NEED THEM */
+  .flexbox-slider {
+    display: flex;
+    width: 100%;
+    height: 650px;
+    visibility: hidden;
+  }
+  .flexbox-slider .flexbox-slide {
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: linear;
+    transition-delay: 0s;
+    width: 20%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+    visibility: visible;
+  }
+  .flexbox-slider .flexbox-slide:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.6);
+    z-index: 2;
+    opacity: 0;
+  }
+  .flexbox-slider .flexbox-slide img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: auto;
+    width: auto;
+    min-width: 100%;
+    min-height: 100%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+  }
+
+
+  .flexbox-slider .flexbox-slide .text-block {
+    position: absolute;
+    left: 30px;
+    bottom: 30px;
+    max-width: 400px;
+    padding: 20px;
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #fff;
+    z-index: 4;
+    visibility: hidden;
+    opacity: 0;
+  }
+  .flexbox-slider .flexbox-slide .text-block h3 {
+    font-size: 20px;
+    font-weight: 700;
+  }
+  .flexbox-slider:hover .flexbox-slide:hover {
+    flex-shrink: 0;
+    width: 80%;
+  }
+
+  /* effect 2 styles */
+  .flexbox-slider.flexbox-slider-2 .flexbox-slide .text-block {
+    left: -60px;
+  }
+  .flexbox-slider.flexbox-slider-2:hover .flexbox-slide:not(:hover):after {
+    transition-property: all;
+    transition-duration: 0.2s;
+    transition-timing-function: linear;
+    transition-delay: 0s;
+    opacity: 1;
+  }
+  .flexbox-slider.flexbox-slider-2:hover .flexbox-slide:hover .text-block {
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: cubic-bezier(0, 0, 0, 1.82);
+    transition-delay: 0.5s;
+    left: 30px;
+    opacity: 1;
+    visibility: visible;
+  }
