--- a/public/css/master.css
+++ b/public/css/master.css
@@ -50,7 +50,7 @@ a{
 }
 .pages{
     width: 100% !important;
-    height: 100vh !important;
+    height: auto !important;
     margin: 0 auto;
     background-color: rgb(122,14,21);
     display: flex;
@@ -196,7 +196,7 @@ a{
   .flexbox-slider {
     display: flex;
     width: 100%;
-    height: 650px;
+    height: 500px;
     visibility: hidden;
   }
   .flexbox-slider .flexbox-slide {
@@ -243,7 +243,7 @@ a{
     max-width: 400px;
     padding: 20px;
     border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.9);
     color: #fff;
     z-index: 4;
     visibility: hidden;
