--- a/public/css/master.css
+++ b/public/css/master.css
@@ -299,3 +299,56 @@ a{
     opacity: 1;
     visibility: visible;
   }
+.contact-feed{
+    background-color: rgb(255,255,255,0.8);
+}
+.contacto{
+    margin-top: 10%;
+    padding: 5%;
+}
+  /* label color */
+  .input-field label {
+    color: #ffffff !important;
+  }
+  /* label focus color */
+  .input-field input[type=text]:focus + label {
+    color: #ffffff !important;
+  }
+  .input-field textarea:focus + label {
+    color: #ffffff !important;
+  }
+  /* label underline focus color */
+  .input-field input[type=text]:focus {
+    border-bottom: 1px solid #ffffff !important;
+    box-shadow: 0 1px 0 0 #ffffff !important;
+    color: #ffffff !important;
+  }
+  .input-field textarea:focus {
+    border-bottom: 1px solid #ffffff !important;
+    box-shadow: 0 1px 0 0 #ffffff !important;
+    color: #ffffff !important;
+  }
+  /* valid color */
+  .input-field input[type=text].valid {
+    border-bottom: 1px solid #ffffff !important;
+    box-shadow: 0 1px 0 0 #ffffff !important;
+    color: #ffffff !important;
+  }
+  .input-field textarea.valid {
+    border-bottom: 1px solid #ffffff !important;
+    box-shadow: 0 1px 0 0 #ffffff !important;
+    color: #ffffff !important;
+  }
+  /* invalid color */
+  .input-field input[type=text].invalid {
+    border-bottom: 1px solid #ffffff !important;
+    box-shadow: 0 1px 0 0 #ffffff !important;
+  }
+  .input-field textarea.invalid {
+    border-bottom: 1px solid #ffffff !important;
+    box-shadow: 0 1px 0 0 #ffffff !important;
+  }
+  /* icon prefix focus color */
+  .input-field .prefix.active {
+    color: #ffffff !important;
+  }
